--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/gh/codeOpacity/op_icons@main/op_icons.all.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <meta name="description" content="Our application is coming soon. Stay tuned! Drop your email to get notified when we launch.">
   </head>
   <body>
