--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div class="whatsapp-link-box">
               <a href="https://chat.whatsapp.com/Kgxlqn99EMKF9rfnjTIYK7" aria-label="Join our WhatsApp group">
-                <img src="images__15_-removebg-preview.png" alt="WhatsApp Logo" class="whatsapp-logo">
+                <img src="whatsapp-logo.png" alt="WhatsApp Logo" class="whatsapp-logo">
                 Join our WhatsApp group
               </a>
             </div>
@@ -65,6 +65,6 @@
         </div>
       </div>
     </section>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
